# Vacant_Lot_Detection

./: .gitignore  CLAUDE.md  LICENSE  README.md  analysis.py  cluster_vacant_lots.ipynb  config.py  config.yaml  data_utils.py  dependencies.py  gee_utils.py  geometry.py  justfile  logger.py  mappluto.py  naip.py  plotting.py  pyproject.toml  raster_utils.py  utils.py
EDA/: 01_cluster_lots.ipynb  02_parcel_classifier.ipynb  03_manual_inspection_of_lots.ipynb  03_visualize_sample.ipynb  04_borough_vacancy_eda.ipynb  04_change_map_layers.py  04_parcel_classifier.ipynb  05_change_2019_2025.py  README.md  clean.ipynb  cluster_vacant_lots.ipynb  visualizations.ipynb
config/: data.yaml  deeplabv3_resnet18.yaml  deeplabv3_resnet18_kahan.yaml  lgbm.yaml  nyc_buildings.yaml  nyc_change_2019.yaml  nyc_change_2025.yaml  nyc_segmentation.yaml  nyc_vacant.yaml  rf.yaml  template.yaml  unet64_resnet18_kahan_titanv.yaml  unet_32.yaml  unet_64.yaml  unet_resnet18.yaml  unet_resnet18_kahan.yaml
data_prep/: 01_prepare_segmentation_data.ipynb  02_generate_label_masks.ipynb  download_naip.py  export_patch_grid.py  extract_patches.py  justfile  predict_buildings.py  prepare_labels.py  visualize_building_inputs.py
docs/: MASK_TUNING.md  MASK_V2_CHANGELOG.md
drafts/: appendix_a_parcel_classifier.md  appendix_b_pixel_baselines.md  appendix_c_run_log.md  latex_conversion_rules.md  sec2_background_landcover_vs_vacancy.md  sec2_scalability_smaller_jurisdictions.md  sec3_data_and_materials.md  sec4_methods.md  sec5_results.md  sec6_error_analysis_discussion.md
modeling/: 01_visualize_sample.ipynb  02_parcel_classifier.ipynb  s1_parcel_classifier_writeup.md
scripts/: collect_runs.py  eval_confusion_by_class.py  eval_parcel_level.py  export_patch_grid.py  plot_building_permits.py  plot_prediction_comparison.py  plot_thesis_architectures.py  run_comparison.ipynb  run_prediction_comparisons.py  run_visualizations.py  sorted_runs.csv  upload_kaggle_dataset.py
tex/: thesis.tex
train/: eval_run.py  justfile  plot_results.py  train_dl.py  train_lgbm.py  train_rf.py  visualize_predictions.py
vacant_lot/: analysis.py  naip.py  (+16 more)
(+8 files in other folders)
